# PortfolioOptimizer-PREVI-OPTIONS

./: .gitignore  LICENSE  README.md  main.py  performance-analysis.ipynb  portfolio-optimizer.py  preprocessing.py  pyproject.toml  requirements.txt
data/: PREVI-OPTIONS.xls
data/processed/: data.csv
src/: build_database.py  config.py  data.py  fetch_tickers.py  markowitz.py  plots.py  run_analysis.py  tickers.csv
src/data/: last_dates.parquet  ticker_meta.parquet
src/data/opcvm_parquet/ticker=0P00000EUQ.F/year=2018/: part-1775406020027.parquet
src/data/opcvm_parquet/ticker=0P00000EUQ.F/year=2019/: part-1775406020027.parquet
src/data/opcvm_parquet/ticker=0P00000EUQ.F/year=2020/: part-1775406020027.parquet
src/data/opcvm_parquet/ticker=0P00000EUQ.F/year=2021/: part-1775406020027.parquet
src/data/opcvm_parquet/ticker=0P00000EUQ.F/year=2022/: part-1775406020027.parquet
src/data/opcvm_parquet/ticker=0P00000EUQ.F/year=2023/: part-1775406020027.parquet
src/data/opcvm_parquet/ticker=0P00000EUQ.F/year=2024/: part-1775406020027.parquet
src/data/opcvm_parquet/ticker=0P00000EUQ.F/year=2025/: part-1775406020027.parquet
src/data/opcvm_parquet/ticker=0P00000EUQ.F/year=2026/: part-1775406020027.parquet
src/data/opcvm_parquet/ticker=0P00000FUS.F/year=2018/: part-1775007953873.parquet
src/data/opcvm_parquet/ticker=0P00000FUS.F/year=2019/: part-1775007953873.parquet
src/data/opcvm_parquet/ticker=0P00000FUS.F/year=2020/: part-1775007953873.parquet
src/data/opcvm_parquet/ticker=0P00000FUS.F/year=2021/: part-1775007953873.parquet
src/data/opcvm_parquet/ticker=0P00000FUS.F/year=2022/: part-1775007953873.parquet
src/data/opcvm_parquet/ticker=0P00000FUS.F/year=2023/: part-1775007953873.parquet
src/data/opcvm_parquet/ticker=0P00000FUS.F/year=2024/: part-1775007953873.parquet
src/data/opcvm_parquet/ticker=0P00000FUS.F/year=2025/: part-1775007953873.parquet
src/data/opcvm_parquet/ticker=0P00000FUS.F/year=2026/: part-1775007953873.parquet  part-1775395535180.parquet
src/database/: init.sh  start.sh
src/notebook/: 1-markowitz.ipynb  1_markovitz.ipynb
tests/: test_data_layer.py  test_markowitz.py  test_turnover_penalty.py
(+483 files in other folders)
