[project]
name = "portfoliooptimizer-previ-options"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.4",
    "scipy>=1.16.0",
    "sqlalchemy>=2.0.41",
    "tqdm>=4.67.1",
    "yfinance>=0.2.64",
]
