[project]
name = "portfoliooptimizer-previ-options"
version = "0.1.0"
description = "Markowitz portfolio optimisation on OPCVM funds available in Previ-Options"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.0",
    "sqlalchemy>=2.0.41",
    "tqdm>=4.67.1",
    "yfinance>=0.2.64",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
