[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "portfoliooptimizer-previ-options"
version = "0.1.0"
description = "Markowitz portfolio optimisation on OPCVM funds available in Previ-Options"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "pyarrow>=21.0.0",

    "requests>=2.32.4",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.0",
    "tqdm>=4.67.1",
    "yfinance>=0.2.64",
]

[project.scripts]
previ-options = "main:main"

[tool.setuptools]
py-modules = ["main"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 88
extend-exclude = ["src/data"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["markowitz", "plots", "config", "build_database", "run_analysis", "data"]
